==> gillspice/mios32/trunk/mios32/LPC17xx/mios32_uart.c <==
#include <mios32.h>
#define MIOS32_UART_RX_BUFFER_SIZE 16
#define MIOS32_UART_TX_BUFFER_SIZE 16
#define UART_PERIPHERAL_FRQ (MIOS32_SYS_CPU_FREQUENCY/4)
#define MIOS32_UART0_TX_INIT     { MIOS32_SYS_LPC_PINSEL(2, 0, 2); MIOS32_SYS_LPC_PINMODE(2, 0, 2); MIOS32_SYS_LPC_PINMODE_OD(2, 0, 1); }
#define MIOS32_UART0_RX_INIT     { MIOS32_SYS_LPC_PINSEL(2, 1, 2); MIOS32_SYS_LPC_PINMODE(2, 1, 0); }
#define MIOS32_UART0             LPC_UART1
#define MIOS32_UART1_TX_INIT     { MIOS32_SYS_LPC_PINSEL(0, 0, 2); MIOS32_SYS_LPC_PINMODE(0, 0, 2); MIOS32_SYS_LPC_PINMODE_OD(0, 0, 1); }
#define MIOS32_UART1_RX_INIT     { MIOS32_SYS_LPC_PINSEL(0, 1, 2); MIOS32_SYS_LPC_PINMODE(0, 1, 0); }
#define MIOS32_UART1             LPC_UART3
#define MIOS32_UART2_TX_INIT     { MIOS32_SYS_LPC_PINSEL(0, 2, 1); MIOS32_SYS_LPC_PINMODE(0, 2, 2); MIOS32_SYS_LPC_PINMODE_OD(0, 2, 1); }
#define MIOS32_UART2_RX_INIT     { MIOS32_SYS_LPC_PINSEL(0, 3, 1); MIOS32_SYS_LPC_PINMODE(0, 3, 0); }
#define MIOS32_UART2             LPC_UART0
#define LSR_RDR         0x01
#define LSR_OE          0x02
#define LSR_PE          0x04
#define LSR_FE          0x08
#define LSR_BI          0x10
#define LSR_THRE        0x20
#define LSR_TEMT        0x40
#define LSR_RXFE        0x80

s32 MIOS32_UART_Init(u32 mode)
{
  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

#if MIOS32_UART_NUM == 0
  return -1; // no UARTs
#else

  // configure UART pins
  MIOS32_UART0_TX_INIT;
  MIOS32_UART0_RX_INIT;
#if MIOS32_UART_NUM >= 2
  MIOS32_UART1_TX_INIT;
  MIOS32_UART1_RX_INIT;
#endif
#if MIOS32_UART_NUM >= 3
  MIOS32_UART2_TX_INIT;
  MIOS32_UART2_RX_INIT;
#endif

  // clear size counters
  int i;
  for(i=0; i<MIOS32_UART_NUM; ++i) {
    tx_buffer_size[i] = 0;
  }

  // UART configuration
  MIOS32_UART_BaudrateSet(0, MIOS32_UART0_BAUDRATE);
#if MIOS32_UART_NUM >=2
  MIOS32_UART_BaudrateSet(1, MIOS32_UART1_BAUDRATE);
#endif
#if MIOS32_UART_NUM >=3
  MIOS32_UART_BaudrateSet(2, MIOS32_UART2_BAUDRATE);
#endif

  return 0; // no error
#endif
}

s32 MIOS32_UART_BaudrateSet(u8 uart, u32 baudrate)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1;

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];

  // Inspired from lpc17xx_uart.c of the IEC60335 Class B library v1.0
  u32 uClk = UART_PERIPHERAL_FRQ;
  u32 calcBaudrate = 0;
  u32 temp = 0;

  u32 mulFracDiv, dividerAddFracDiv;
  u32 diviser = 0 ;
  u32 mulFracDivOptimal = 1;
  u32 dividerAddOptimal = 0;
  u32 diviserOptimal = 0;

  u32 relativeError = 0;
  u32 relativeOptimalError = 100000;

  uClk = uClk >> 4; /* div by 16 */
  /* In the Uart IP block, baud rate is calculated using FDR and DLL-DLM registers
   * The formula is :
   * BaudRate= uClk * (mulFracDiv/(mulFracDiv+dividerAddFracDiv) / (16 * (DLL)
   * It involves floating point calculations. That's the reason the formulae are adjusted with
   * Multiply and divide method.*/
  /* The value of mulFracDiv and dividerAddFracDiv should comply to the following expressions:
   * 0 < mulFracDiv <= 15, 0 <= dividerAddFracDiv <= 15 */
  for(mulFracDiv = 1 ; mulFracDiv <= 15 ;mulFracDiv++) {
    for(dividerAddFracDiv = 0 ; dividerAddFracDiv <= 15 ;dividerAddFracDiv++) {
      temp = (mulFracDiv * uClk) / ((mulFracDiv + dividerAddFracDiv));

      diviser = temp / baudrate;
      if ((temp % baudrate) > (baudrate / 2))
	diviser++;

      if (diviser > 2 && diviser < 65536) {
	calcBaudrate = temp / diviser;

	if (calcBaudrate <= baudrate)
	  relativeError = baudrate - calcBaudrate;
	else
	  relativeError = calcBaudrate - baudrate;

	if( (relativeError < relativeOptimalError) ) {
	  mulFracDivOptimal = mulFracDiv ;
	  dividerAddOptimal = dividerAddFracDiv;
	  diviserOptimal = diviser;
	  relativeOptimalError = relativeError;
	  if (relativeError == 0)
	    break;
	}
      } /* End of if */
    } /* end of inner for loop */

    if( relativeError == 0 )
      break;
  } /* end of outer for loop  */

  u->LCR = 0x83; // 8 bits, no Parity, 1 Stop bit, DLAB=1
  u->DLM = (diviserOptimal >> 8) & 0xff;
  u->DLL = diviserOptimal & 0xff;
  u->LCR = 0x03; // disable access to divisor latches
  u->FDR = ((mulFracDivOptimal&0xf) << 4) | (dividerAddOptimal&0xf);
  u->FCR = 0x07; // Enable and reset TX and RX FIFO

  // store baudrate in array
  uart_baudrate[uart] = baudrate;

  return 0;
#endif
}

s32 MIOS32_UART_RxBufferGet(u8 uart)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1; // UART not available

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
  if( (u->LSR & LSR_RDR) == 0 )
    return -2; // nothing new in buffer

  // read byte from FIFO
  u8 b = u->RBR;

  return b; // return received byte
#endif
}

s32 MIOS32_UART_RxBufferPeek(u8 uart)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1; // UART not available

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
  if( (u->LSR & LSR_RDR) == 0 )
    return -2; // nothing new in buffer

  // not supported by LPC based UART
  return -3;
#endif
}

s32 MIOS32_UART_TxBufferPutMore_NonBlocking(u8 uart, u8 *buffer, u16 len)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1; // UART not available

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
  if( (u->LSR & LSR_THRE) == 0 )
    return -2; // buffer full or cannot get all requested bytes (retry)

  // copy bytes to be transmitted into transmit buffer
  u16 i;
  for(i=0; i<len; ++i) {
    while( (u->LSR & LSR_THRE) == 0 ); // blocking... :-/
    u->THR = *buffer++;
  }

  return 0; // no error
#endif
}
